--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/chathead.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/chathead.xml
@@ -11,9 +11,10 @@
 
         <ImageView
             android:id="@+id/chathead_img"
-            android:layout_width="85px"
+            android:layout_width="125px"
             android:layout_height="85px"
             android:tag="mwar"
+            android:paddingRight="40px"
             android:src="@drawable/auto_head_main_selector" />
     </AbsoluteLayout>
 
