--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/menu_item_pressed.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/menu_item_pressed.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     
-    <solid android:color="@color/bg_white_translucent"/>
+    <solid android:color="@color/new_orange"/>
 
 </shape>
