--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_add_customer_cash.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_add_customer_cash.xml
@@ -36,7 +36,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/textViewCashByCustomer"
