--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
@@ -1,110 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rv"
-    android:layout_width="720px"
-    android:layout_height="1134px"
-    android:orientation="vertical"
-        android:splitMotionEvents="false"
-         >
+<FrameLayout android:id="@+id/rv"
+             xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="720px"
+             android:layout_height="1134px"
+             android:orientation="vertical"
+             android:splitMotionEvents="false"
+    >
 
     <RelativeLayout
         android:id="@+id/innerRl"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="30px"
+        android:layout_margin="40px"
         android:background="@drawable/dialog_background_color"
         android:splitMotionEvents="false"
-         >
-        
-        
+        >
+
+
         <LinearLayout
             android:id="@+id/rl1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="40px"
-        android:splitMotionEvents="false"
-        
-             >
+            android:padding="0px"
+            android:splitMotionEvents="false"
+
+            >
 
             <TextView
                 android:id="@+id/textHead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
                 android:layout_alignParentTop="true"
+                android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:text="@string/alert"
-                android:textColor="@color/blue_btn"
-                android:textSize="50px" 
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
+                android:text="@string/alert"
+                android:textColor="@color/blue_btn"
+                android:textSize="50px"
                 android:visibility="gone"
-                
+
                 />
-		 
-            
-            
+
+
             <TextView
                 android:id="@+id/textMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxHeight="800px"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginTop="60px"
                 android:gravity="center"
-                android:text="Message"
-                android:layout_marginTop="20px"
-                android:textColor="@color/black"
                 android:lineSpacingExtra="10px"
-                android:textSize="34px" 
+                android:maxHeight="800px"
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
-                
+                android:text="Message"
+                android:textColor="@color/black"
+                android:textSize="34px"
+
                 />
-            
-            <RelativeLayout 
+
+            <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:layout_marginTop="30px"
-                        android:layout_alignParentBottom="true"
-        android:splitMotionEvents="false"
+                android:splitMotionEvents="false"
                 >
-                
-            
 
-                    <Button
-                        android:id="@+id/btnOk"
-                        android:layout_width="247px"
-                        android:layout_height="83px"
-                        android:layout_marginRight="20px"
-                        android:layout_alignParentRight="true"
-                        android:background="@drawable/blue_btn_selector"
-                        android:singleLine="true"
-                        android:text="@string/ok"
-                        android:textColor="@drawable/white_color_selector"
-                        android:textSize="@dimen/button_text_size" 
-                android:layout_gravity="center_horizontal"
-                />
-                    
-                    <Button
-                        android:id="@+id/btnCancel"
-                        android:layout_width="247px"
-                        android:layout_height="83px"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="20px"
-                        android:background="@drawable/red_btn_selector"
-                        android:singleLine="true"
-                        android:text="@string/cancel"
-                        android:textColor="@drawable/white_color_selector"
-                        android:textSize="@dimen/button_text_size" 
-                android:layout_gravity="center_horizontal"
-                />
-</RelativeLayout>
-            
-            
+
+                <Button
+                    android:id="@+id/btnOk"
+                    android:layout_width="320px"
+                    android:layout_height="83px"
+                    android:layout_alignParentRight="true"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/new_orange_btn_corner_selector"
+                    android:singleLine="true"
+                    android:text="@string/ok"
+                    android:textColor="@drawable/white_color_selector"
+                    android:textSize="@dimen/button_text_size"
+                    />
+
+                <Button
+                    android:id="@+id/btnCancel"
+                    android:layout_width="320px"
+                    android:layout_height="83px"
+                    android:layout_alignParentLeft="true"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/menu_black_btn_corner_selector"
+                    android:singleLine="true"
+                    android:text="@string/cancel"
+                    android:textColor="@drawable/white_color_selector"
+                    android:textSize="@dimen/button_text_size"
+                    />
+            </RelativeLayout>
+
+
         </LinearLayout>
-        
+
     </RelativeLayout>
 
 </FrameLayout>
