--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -199,7 +199,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:splitMotionEvents="false"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <!-- customer info layout -->
                     <LinearLayout
@@ -322,7 +322,7 @@
                             android:layout_marginBottom="20px"
                             android:layout_marginLeft="40px"
                             android:splitMotionEvents="false"
-                            android:visibility="gone">
+                            android:visibility="visible">
 
                             <ImageView
                                 android:id="@+id/driverPassengerRatingStar"
@@ -395,7 +395,7 @@
                         android:layout_height="240px"
                         android:layout_alignParentBottom="true"
                         android:splitMotionEvents="false"
-                        android:visibility="gone">
+                        android:visibility="visible">
 
                         <Button
                             android:id="@+id/driverStartRideMyLocationBtn"
@@ -695,12 +695,12 @@
 
                             <Button
                                 android:id="@+id/driverEndRideBtn"
-                                android:layout_width="648px"
+                                android:layout_width="400px"
                                 android:layout_height="99px"
                                 android:layout_alignParentBottom="true"
                                 android:layout_centerHorizontal="true"
                                 android:layout_marginBottom="27px"
-                                android:background="@drawable/orange_btn_selector"
+                                android:background="@drawable/menu_black_btn_selector"
                                 android:text="@string/end_ride"
                                 android:textColor="@drawable/white_color_selector"
                                 android:textSize="@dimen/button_text_size"/>
@@ -833,7 +833,7 @@
                 android:layout_marginTop="90px"
                 android:animateLayoutChanges="true"
                 android:splitMotionEvents="false"
-                android:visibility="gone"
+                android:visibility="visible"
                 >
 
 
@@ -883,7 +883,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="126px"
                                     android:layout_marginTop="15px"
-                                    android:background="@color/black_translucent"
+                                    android:background="@color/white"
                                     android:gravity="center_vertical"
                                     android:orientation="horizontal"
                                     >
@@ -904,7 +904,7 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="@string/distance"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
 
                                         <TextView
@@ -917,14 +917,14 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="4.7 Kms"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
                                     </RelativeLayout>
 
                                     <ImageView
                                         android:layout_width="2px"
                                         android:layout_height="90px"
-                                        android:background="@color/white"/>
+                                        android:background="@color/menu_black"/>
 
                                     <RelativeLayout
                                         android:id="@+id/reviewWaitTimeRl"
@@ -942,7 +942,7 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="@string/wait_time"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
 
                                         <TextView
@@ -954,7 +954,7 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="4 min"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
 
                                     </RelativeLayout>
@@ -963,7 +963,7 @@
                                         android:id="@+id/imageViewEndRideWaitSep"
                                         android:layout_width="2px"
                                         android:layout_height="90px"
-                                        android:background="@color/white"/>
+                                        android:background="@color/menu_black"/>
 
                                     <RelativeLayout
                                         android:id="@+id/reviewRideTimeRl"
@@ -981,7 +981,7 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="Ride Time"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
 
                                         <TextView
@@ -994,14 +994,14 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="4 min"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
                                     </RelativeLayout>
 
                                     <ImageView
                                         android:layout_width="2px"
                                         android:layout_height="90px"
-                                        android:background="@color/white"/>
+                                        android:background="@color/menu_black"/>
 
                                     <RelativeLayout
                                         android:id="@+id/reviewFareRl"
@@ -1019,7 +1019,7 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="@string/fare"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
 
                                         <TextView
@@ -1032,7 +1032,7 @@
                                             android:gravity="center"
                                             android:singleLine="true"
                                             android:text="Rs 10.00"
-                                            android:textColor="@color/white"
+                                            android:textColor="@color/menu_black"
                                             android:textSize="@dimen/end_ride_details_text_size"/>
                                     </RelativeLayout>
 
@@ -1165,9 +1165,9 @@
                                     android:layout_height="220px"
                                     android:layout_centerHorizontal="true"
                                     android:layout_centerVertical="true"
-                                    android:background="@drawable/coupon_fare_bg"
+                                    android:background="@drawable/coupon_text_box"
                                     android:tag="mwar"
-                                    android:visibility="gone">
+                                    android:visibility="visible">
 
                                     <LinearLayout
                                         android:id="@+id/linearLayoutCouponTitle"
@@ -1185,7 +1185,7 @@
                                             android:layout_marginRight="20px"
                                             android:gravity="center"
                                             android:text="Free Ride"
-                                            android:textColor="@color/black"
+                                            android:textColor="@color/white"
                                             android:textSize="46px"/>
 
                                         <TextView
@@ -1198,7 +1198,7 @@
                                             android:layout_marginTop="40px"
                                             android:gravity="center"
                                             android:text="of upto Rs. 100/-"
-                                            android:textColor="@color/black"
+                                            android:textColor="@color/white"
                                             android:textSize="32px"
                                             android:visibility="visible"/>
                                     </LinearLayout>
@@ -1218,7 +1218,7 @@
                                             android:layout_gravity="center_horizontal"
                                             android:gravity="center"
                                             android:text="Pay"
-                                            android:textColor="@color/black"
+                                            android:textColor="@color/white"
                                             android:textSize="46px"/>
 
                                         <TextView
@@ -1229,7 +1229,7 @@
                                             android:layout_marginTop="60px"
                                             android:gravity="center"
                                             android:text="Rs. 0"
-                                            android:textColor="@color/black"
+                                            android:textColor="@color/white"
                                             android:textSize="38px"/>
                                     </LinearLayout>
                                 </RelativeLayout>
@@ -1534,7 +1534,7 @@
                                     android:layout_width="648px"
                                     android:layout_height="99px"
                                     android:layout_marginTop="48px"
-                                    android:background="@drawable/blue_btn_selector"
+                                    android:background="@drawable/new_orange_btn_round_corner_normal"
                                     android:text="@string/submit"
                                     android:textColor="@drawable/white_color_selector"
                                     android:textSize="@dimen/button_text_size"/>
@@ -1546,7 +1546,7 @@
                                     android:layout_marginTop="24px"
                                     android:background="@drawable/white_bg"
                                     android:text="Skip"
-                                    android:textColor="@drawable/blue_btn_color_selector"
+                                    android:textColor="@color/new_orange"
                                     android:textSize="@dimen/button_text_size"
                                     android:visibility="visible"
                                     />
