--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_activity.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_activity.xml
@@ -26,7 +26,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/share_activity_text_margin_left"
                 android:text="@string/number_of_downloads"
-                android:textColor="@color/leaderboard_activity_text_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/share_activity_text_size" />
 
             <TextView
@@ -37,7 +37,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/share_activity_text_margin_right"
                 android:text="0"
-                android:textColor="@color/leaderboard_activity_text_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/share_activity_number_text_size" />
 
 
@@ -60,7 +60,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/share_activity_text_margin_left"
                 android:text="@string/number_of_first_rides"
-                android:textColor="@color/leaderboard_activity_text_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/share_activity_text_size" />
 
             <TextView
@@ -71,7 +71,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/share_activity_text_margin_right"
                 android:text="0"
-                android:textColor="@color/leaderboard_activity_text_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/share_activity_number_text_size" />
 
 
@@ -93,7 +93,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/share_activity_text_margin_left"
                 android:text="@string/money_earned"
-                android:textColor="@color/leaderboard_activity_text_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/share_activity_text_size" />
 
             <TextView
@@ -104,7 +104,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="@dimen/share_activity_text_margin_right"
                 android:text="0"
-                android:textColor="@color/leaderboard_activity_text_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/share_activity_number_text_size" />
 
 
@@ -117,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/data_effective_format"
-            android:textColor="@color/leaderboard_activity_text_color"
+            android:textColor="@color/black"
             android:textSize="@dimen/share_activity_text_size_small"
             android:layout_marginTop="@dimen/share_activity_data_text_margin_top" />
 
