--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linearLayoutRoot"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -21,54 +21,60 @@
             <RelativeLayout
                 android:id="@+id/shareImgRl"
                 android:layout_width="match_parent"
-                android:layout_height="600px"
-                android:background="@drawable/bg_image"
-                >
+                android:layout_height="650px">
 
 
                 <ImageView
                     android:id="@+id/imageViewJugnooLogo"
-                    android:layout_width="468px"
-                    android:layout_height="360px"
+                    android:layout_width="match_parent"
+                    android:layout_height="505px"
                     android:layout_centerHorizontal="true"
-                    android:background="@drawable/referral_icon"
-                    android:layout_marginTop="50px"
+                    android:background="@drawable/invite_earn_image"
                     android:tag="mwar"
-                    android:visibility="visible" />
+                    android:visibility="visible"/>
 
-
-                <TextView
-                    android:id="@+id/textViewReferralCodeDisplay"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <RelativeLayout
+                    android:id="@+id/showReferralRLayout"
+                    android:layout_width="500px"
+                    android:layout_height="142px"
                     android:layout_below="@+id/imageViewJugnooLogo"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="30px"
-                    android:layout_marginLeft="20px"
-                    android:layout_marginRight="20px"
-                    android:gravity="center"
-                    android:singleLine="true"
-                    android:text="Your Referral Code is"
-                    android:textColor="@color/white"
-                    android:textSize="36px"
-                    />
+                    android:background="@drawable/referral_box">
 
 
-                <TextView
-                    android:id="@+id/textViewReferralCodeValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/textViewReferralCodeDisplay"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20px"
-                    android:layout_marginLeft="20px"
-                    android:layout_marginRight="20px"
-                    android:gravity="center"
-                    android:singleLine="true"
-                    android:text="12345678"
-                    android:textColor="@color/white"
-                    android:textSize="44px"
-                    />
+                    <TextView
+                        android:id="@+id/textViewReferralCodeDisplay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginLeft="20px"
+                        android:layout_marginRight="20px"
+                        android:layout_marginTop="15px"
+                        android:gravity="center"
+                        android:singleLine="true"
+                        android:text="Your Referral Code is"
+                        android:textColor="@color/black"
+                        android:textSize="36px"
+                        />
+
+
+                    <TextView
+                        android:id="@+id/textViewReferralCodeValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textViewReferralCodeDisplay"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginLeft="20px"
+                        android:layout_marginRight="20px"
+                        android:layout_marginTop="20px"
+                        android:gravity="center"
+                        android:singleLine="true"
+                        android:text="12345678"
+                        android:textColor="@color/black"
+                        android:textSize="44px"
+                        />
+
+                </RelativeLayout>
 
 
             </RelativeLayout>
@@ -90,19 +96,19 @@
                         android:layout_height="100px"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="32px"
-                        android:background="@color/grey_leader"
+                        android:background="@drawable/new_orange_btn_selector"
                         android:text="शेयर करें"
                         android:textColor="@drawable/white_color_selector"
-                        android:textSize="48px" />
+                        android:textSize="48px"/>
                     <ImageView
                         android:id="@+id/imageShareLogo"
-                        android:layout_marginTop="50px"
-                        android:layout_marginLeft="80px"
                         android:layout_width="54px"
                         android:layout_height="54px"
+                        android:layout_marginLeft="80px"
+                        android:layout_marginTop="50px"
                         android:background="@drawable/share_button_icon"
                         android:tag="mwar"
-                        android:visibility="visible" />
+                        android:visibility="visible"/>
                 </RelativeLayout>
 
                 <TextView
@@ -114,8 +120,8 @@
                     android:layout_marginLeft="20px"
                     android:layout_marginRight="20px"
                     android:layout_marginTop="30px"
-                    android:lineSpacingExtra="10px"
                     android:gravity="center"
+                    android:lineSpacingExtra="10px"
                     android:text="Share your referral code 12345678"
                     android:textColor="@color/black"
                     android:textSize="32px"
