--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_leaderboard.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_leaderboard.xml
@@ -21,7 +21,7 @@
             android:layout_width="@dimen/share_lb_button_width"
             android:layout_height="@dimen/share_lb_button_height"
             android:layout_marginLeft="30px"
-            android:background="@drawable/background_white_bordered_blue_rounded_selector"
+            android:background="@drawable/new_orange_btn_selector"
             android:text="@string/local_leaderboard"
             android:textColor="@drawable/text_color_grey_dark_white_selector"
             android:textSize="@dimen/button_text_size" />
@@ -31,7 +31,7 @@
             android:layout_width="@dimen/share_lb_button_width"
             android:layout_height="@dimen/share_lb_button_height"
             android:layout_marginRight="30px"
-            android:background="@drawable/button_blue_normal"
+            android:background="@drawable/new_orange_btn_round_corner_normal"
             android:text="@string/global_leaderboard"
             android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"
@@ -56,7 +56,7 @@
             android:text="@string/daily_leaderboard"
             android:textColor="@color/white"
             android:textSize="@dimen/share_lb_text_size"
-            android:background="@drawable/background_blue"
+            android:background="@color/new_orange"
             />
         <TextView
             android:id="@+id/textViewWeekly"
