feature_driver_new_UI: driver profile and edit profile UI changed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_three_buttons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_three_buttons.xml
@@ -36,7 +36,7 @@
                 android:layout_alignParentTop="true"
                 android:gravity="center"
                 android:text="@string/alert"
-                android:textColor="@color/blue_btn"
+                android:textColor="@color/new_orange"
                 android:textSize="50px" 
                 android:paddingLeft="20px"
                 android:paddingRight="20px"
@@ -76,7 +76,7 @@
                         android:layout_width="180px"
                         android:layout_height="83px"
                         android:layout_alignParentRight="true"
-                        android:background="@drawable/blue_btn_selector"
+                        android:background="@drawable/new_orange_btn_selector_rounded"
                         android:singleLine="true"
                         android:text="@string/ok"
                         android:textColor="@drawable/white_color_selector"
@@ -105,7 +105,7 @@
                         android:layout_width="180px"
                         android:layout_height="83px"
                         android:layout_alignParentLeft="true"
-                        android:background="@drawable/red_btn_selector"
+                        android:background="@drawable/new_menu_black_btn_selector_corner_rounded"
                         android:singleLine="true"
                         android:text="@string/cancel"
                         android:textColor="@drawable/white_color_selector"
