--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -133,15 +133,15 @@
                     android:textSize="42px"/>
 
 
-                <ImageView
-                    android:id="@+id/imageViewEditName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="42px"
-                    android:background="@drawable/edit_pencil_icon"
-                    android:tag="mwar"/>
+                <!--<ImageView-->
+                    <!--android:id="@+id/imageViewEditName"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_marginRight="42px"-->
+                    <!--android:background="@drawable/edit_pencil_icon"-->
+                    <!--android:tag="mwar"/>-->
 
             </RelativeLayout>
 
