feature_driver_new_UI: new ui for cancelation reasons and otp verification

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_login.xml
@@ -82,6 +82,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="2px"
                     android:layout_marginLeft="10px"
+                    android:layout_marginBottom="2px"
+                    android:layout_marginRight="2px"
                     android:background="@drawable/background_white"
                     android:hint="@string/email_id"
                     android:inputType="textEmailAddress"
@@ -118,6 +120,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="2px"
                     android:layout_marginLeft="10px"
+                    android:layout_marginBottom="2px"
+                    android:layout_marginRight="2px"
                     android:background="@drawable/background_white"
                     android:hint="@string/password"
                     android:inputType="textPassword"
