--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_multiple_accounts.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_multiple_accounts.xml
@@ -16,7 +16,7 @@
             android:id="@+id/topRl"
             android:layout_width="match_parent"
             android:layout_height="90px"
-            android:background="@color/bg_grey_opaque"
+            android:background="@color/menu_black"
             android:splitMotionEvents="false" >
 
             <TextView
