--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
@@ -16,7 +16,7 @@
             android:id="@+id/topRl"
             android:layout_width="match_parent"
             android:layout_height="90px"
-            android:background="@color/bg_grey_opaque"
+            android:background="@color/menu_black"
             android:splitMotionEvents="false" >
 
             <TextView
@@ -97,7 +97,7 @@
                     android:layout_height="100px"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="50px"
-                    android:background="@drawable/blue_btn_selector"
+                    android:background="@drawable/new_orange_btn_selector_rounded"
                     android:text="VERIFY ME"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="@dimen/button_text_size" />
