--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_centerVertical="true"
             android:background="@drawable/transparent"
             android:text="Back"
-            android:textColor="@drawable/blue_alpha_color_selector"
+            android:textColor="@color/new_orange"
             android:textSize="@dimen/button_text_size"/>
 
         <TextView
@@ -30,7 +30,7 @@
             android:layout_centerInParent="true"
             android:gravity="center"
             android:text="REGISTER"
-            android:textColor="@color/blue_btn"
+            android:textColor="@color/new_orange"
             android:textSize="@dimen/button_text_size"/>
     </RelativeLayout>
 
@@ -143,7 +143,7 @@
             android:layout_width="648px"
             android:layout_height="99px"
             android:layout_marginTop="45px"
-            android:background="@drawable/blue_btn_selector"
+            android:background="@drawable/new_orange_btn_selector_rounded"
             android:text="REGISTER"
             android:textColor="@drawable/white_color_selector"
             android:textSize="@dimen/button_text_size"/>
