--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_banner.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_banner.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="@color/red_status"
+            android:background="@color/orange_dark"
             android:gravity="center_horizontal"
             android:padding="35px"
             android:text="Message"
