--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_notification_center.xml
@@ -30,7 +30,7 @@
             android:gravity="center"
             android:text="@string/notifications"
             android:textColor="@color/white"
-            android:textSize="48px"/>
+            android:textSize="40px"/>
 
     </RelativeLayout>
 
@@ -56,8 +56,8 @@
                 android:layout_width="241px"
                 android:layout_height="342px"
                 android:tag="mwar"
+                android:src="@drawable/ic_no_items"
                 />
-                <!--android:src="@drawable/ic_no_items"-->
 
 
             <TextView
