--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_cancel_option.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_cancel_option.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="40px"
-        android:src="@drawable/option_checked"
+        android:src="@drawable/option_checked_orange"
         android:tag="mwar"
         />
 </RelativeLayout>
