--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_forgot_password.xml
@@ -59,7 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="35px"
                 android:gravity="center"
-                android:text="Enter your registered phone number for reseting your password."
+                android:text="@string/enter_phone_no_to_reset_password"
                 android:textColor="@color/black"
                 android:textSize="36px"
                 />
