feature_perfect_ride: perfect accept ride handled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -68,18 +68,6 @@
                         android:layout_below="@+id/textViewDriverInfo"
                         android:background="@drawable/shadow_down" />
 
-
-                    <ListView
-                        android:id="@+id/driverRideRequestsList"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:divider="@color/transparent"
-                        android:visibility="visible"
-                        android:layout_alignParentTop="true"
-                        android:splitMotionEvents="false"
-                        >
-                    </ListView>
-
                     <Button
                         android:id="@+id/driverInitialMyLocationBtn"
                         android:layout_width="80px"
@@ -799,6 +787,15 @@
                 </RelativeLayout>
 
 
+                <ListView
+                    android:id="@+id/driverRideRequestsList"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@color/transparent"
+                    android:visibility="visible"
+                    android:layout_alignParentTop="true"
+                    android:splitMotionEvents="false"
+                    ></ListView>
 
 
             </RelativeLayout>
