feature_driver_new_UI: make paytm server controlled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -2364,7 +2364,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/paytmRecharge"
+                    android:id="@+id/paytmRechargeRl"
                     android:layout_width="match_parent"
                     android:layout_height="84px"
                     android:background="@drawable/menu_item_selector"
